// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders some Markdown 1`] = `
Array [
  <Heading
    level={1}
    slug="hello"
    text={
      Array [
        "Hello",
      ]
    }
  />,
  <Styled.p>
    World
  </Styled.p>,
  "",
  <Styled.ul>
    <Styled.li>
      One
      <Styled.ul>
        <Styled.li>
          Two
        </Styled.li>
      </Styled.ul>
    </Styled.li>
    <Styled.li>
      Three
      
    </Styled.li>
  </Styled.ul>,
  <Styled.p>
    A 
    <Unknown
      title={null}
      to="http://www.interactivethings.com/"
    >
      link
    </Unknown>
     and some 
    <Styled.strong>
      bold
    </Styled.strong>
     and 
    <Styled.em>
      italic
    </Styled.em>
     text. Blank links 
    <Unknown
      title={null}
      to="mailto:foo@bar.com"
    >
      foo@bar.com
    </Unknown>
     
    <Unknown
      title={null}
      to="https://foobar.com"
    >
      https://foobar.com
    </Unknown>
  </Styled.p>,
  "",
  <pre>
    <code
      className={undefined}
    >
      a code block
    </code>
  </pre>,
  <Styled.p>
    Inline 
    <Styled.code>
      code
    </Styled.code>
  </Styled.p>,
  "",
  <Unknown>
    <Styled.p>
      Block quotes rock 
      <Styled.em>
        another em style
      </Styled.em>
    </Styled.p>
  </Unknown>,
]
`;

exports[`Renders some Markdown with custom renderers 1`] = `
Array [
  <Heading
    level={1}
    slug="hello"
    text={
      Array [
        "Hello",
      ]
    }
  />,
  "HELLO PARAGRAPH",
  "",
  <Styled.ul>
    HELLO LIST ITEM
    HELLO LIST ITEM
  </Styled.ul>,
  "HELLO PARAGRAPH",
  "",
  <pre>
    <code
      className={undefined}
    >
      a code block
    </code>
  </pre>,
  "HELLO PARAGRAPH",
  "",
  <Unknown>
    HELLO PARAGRAPH
  </Unknown>,
]
`;
